Correct vertical align of img

--- a/0x02-CSS_advanced/styles/30-style.css
+++ b/0x02-CSS_advanced/styles/30-style.css
@@ -330,7 +330,7 @@ ul.row {
   height: 30rem;
   width: 100%;
   object-fit: cover;
-  align-items: baseline;
+  vertical-align: bottom;
 }
 
 .card-work:hover .card-image img {  
